--- a/SDL_HINT_IDLE_TIMER_DISABLED.mediawiki
+++ b/SDL_HINT_IDLE_TIMER_DISABLED.mediawiki
@@ -16,7 +16,7 @@ A hint that specifies a variable controlling whether the idle timer is disabled 
 |}
 
 == Default ==
-By default...  <br/><<Color2(green,This hint appears to have no default.)>>
+By default the idle timer is enabled. ???
 
 == Code Examples ==
 ```c++
