update formatting - greyed out field

--- a/SDL_EventType.mediawiki
+++ b/SDL_EventType.mediawiki
@@ -9,7 +9,7 @@ An enumeration of the types of events that can be delivered.
 == Values ==
 {|
 |<style="color: #808080;">SDL_FIRSTEVENT
-|<style="color: #808080;">unused (do not remove)
+|<style="color: #808080;">do not remove (unused)
 |-
 |
 |<bgcolor="#EDEDED">''Application events''
@@ -141,13 +141,13 @@ An enumeration of the types of events that can be delivered.
 |<bgcolor="#EDEDED">''Obsolete events''
 |-
 |<style="color: #808080;">SDL_EVENT_COMPAT1
-|<style="color: #808080;">SDL 1.2 events for compatibility
+|<style="color: #808080;">SDL 1.2 events for compatibility (deprecated)
 |-
 |<style="color: #808080;">SDL_EVENT_COMPAT2
-|<style="color: #808080;">SDL 1.2 events for compatibility
+|<style="color: #808080;">SDL 1.2 events for compatibility (deprecated)
 |-
 |<style="color: #808080;">SDL_EVENT_COMPAT3
-|<style="color: #808080;">SDL 1.2 events for compatibility
+|<style="color: #808080;">SDL 1.2 events for compatibility (deprecated)
 |-
 |
 |<bgcolor="#EDEDED">''These are for your use, and should be allocated with [[SDL_RegisterEvents]]()''
